--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Alex Yang <alexalexyang@gmail.com>",
   "dependencies": {
     "gatsby": "^2.18.12",
+    "gatsby-awesome-pagination": "^0.3.5",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-catch-links": "^2.1.21",
     "gatsby-plugin-manifest": "^2.2.31",
