--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-remark-copy-linked-files": "^2.1.33",
+    "gatsby-remark-embed-video": "^2.0.1",
+    "gatsby-remark-images": "^3.1.39",
+    "gatsby-remark-responsive-iframe": "^2.2.30",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.7",
