--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-awesome-pagination": "^0.3.5",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-catch-links": "^2.1.21",
+    "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-react-helmet": "^3.1.16",
